# hifisampler-rs

./: Cargo.toml
.github/workflows/: ci.yml
crates/hifisampler-core/src/: audio.rs  ep.rs
installer/: setup.iss
