[workspace]
members = [
  "crates/hifisampler-server",
  "crates/hifisampler-bridge",
  "crates/hifisampler-core",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/openhachimi/hifisampler"
version = "0.1.3"

[workspace.dependencies]
# Async runtime
tokio = {version = "1", features = ["full"]}
# HTTP server
axum = {version = "0.8", features = ["macros"]}
tower = "0.5"
tower-http = {version = "0.6", features = ["cors", "fs"]}
# Serialization
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_yaml = "0.9"
# ONNX Runtime
ndarray = "0.17"
ort = {version = "2.0.0-rc.11", features = ["ndarray", "load-dynamic"]}
# Audio processing
hound = "3.5"
rubato = "0.16"
rustfft = "6"
# Logging
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
# Error handling
anyhow = "1"
thiserror = "2"
# Misc
base64 = "0.22"
clap = {version = "4", features = ["derive"]}
num-complex = "0.4"
parking_lot = "0.12"
regex = "1"
reqwest = {version = "0.12", features = ["blocking"]}

# ── Release profile: optimize bridge for minimal size ──
[profile.release.package.hifisampler-bridge]
codegen-units = 1
opt-level = "z"
strip = true

[profile.release]
lto = "thin"
opt-level = "z"
